# week-4-programming-kfu02

week_4_exercises/: CMakeLists.txt  package.xml
week_4_exercises/exercise_4_1/: your_node.cpp
week_4_exercises/exercise_4_3/: CMakeLists.txt  exercise_4_3_pub.cpp  exercise_4_3_sub.cpp
week_4_exercises/msgs/: CMakeLists.txt
week_4_exercises/msgs/msg/: CosAndSin.msg
